# langgraph-tut

./: .env.example  .gitignore  CLAUDE.md  README.md  devbox.json  flake.nix  local.env.example  process-compose.yaml  pyproject.toml
app/: ui.py
ingest/: pipeline.py
learning_notes/: 01-stack.md  04-models.md  06-chunking.md  07-hyde.md  09-evaluation.md  10-reasoning-streaming.md
notes/: 01-stack.md  02-devbox-postgres-pgvector.md  03-rag-concepts.md  04-models.md  05-pgvector-schema.md  06-chunking.md  07-hyde.md  08-guardrails.md
rag/: graph.py  retriever.py  state.py
sherlock_holmes/: his_last_bow.txt  the_case_book_of_sherlock_holmes.txt
src/: ask.py  cli_chat_about_anything.py  cli_chat_about_docs.py  eval.py  graph.py  ingest.py  llm.py  retriever.py  state.py  store.py  ui.py  webui.py
src/cli/: chat_about_anything.py  chat_about_docs.py  eval.py
src/graph/: graph.py  llm.py
src/rag/: ingest.py  retriever.py
