[project]
name = "langgraph-tut"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-postgres>=0.0.12",
    "psycopg[binary]>=3.2",
    "streamlit>=1.45",
    "huggingface-hub[cli]>=1.14.0",
    "langchain-text-splitters>=1.1.2",
]

[tool.uv]
package = false
