[project]
name = "langgraph-tut"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-postgres>=0.0.12",
    "psycopg[binary]>=3.2",
    "streamlit>=1.45",
    "huggingface-hub[cli]>=1.14.0",
    "langchain-text-splitters>=1.1.2",
    "llama-cpp-python[server]>=0.3",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "llama-cpp-cuda"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-metal"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal"
explicit = true

[tool.uv.sources]
llama-cpp-python = [
  { index = "llama-cpp-cuda", marker = "sys_platform == 'linux'" },
  { index = "llama-cpp-metal", marker = "sys_platform == 'darwin'" },
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
